# galdr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  renovate.json  requirements-lock.txt
.github/workflows/: ci.yml
analysis/meshuggah-bleed/: context.json  meshuggah-bleed_harmony.json  meshuggah-bleed_harmony_stream.json  meshuggah-bleed_melody.json  meshuggah-bleed_melody_stream.json  meshuggah-bleed_overtone.json  meshuggah-bleed_overtone_stream.json  meshuggah-bleed_perception.json  meshuggah-bleed_report.json  meshuggah-bleed_stream.json
analysis/sabaton-ghost-division/: context.json  sabaton-ghost-division_harmony.json  sabaton-ghost-division_harmony_stream.json  sabaton-ghost-division_melody.json  sabaton-ghost-division_melody_stream.json  sabaton-ghost-division_overtone.json  sabaton-ghost-division_overtone_stream.json  sabaton-ghost-division_perception.json  sabaton-ghost-division_report.json  sabaton-ghost-division_stream.json
docs/: ARC-PROMPT.md  FIRST-LISTEN.md  GETTING-STARTED.md  PERCEPTION-MODEL.md  aurora-runaway.md  bohemian-rhapsody.md  jinjer-pisces.md  on-the-nature-of-daylight.md  release-0.1.5.md  rich-men-north-of-richmond.md  silence-aware-metrics.md
experiences/: 32-meshuggah-bleed.md  33-sabaton-ghost-division.md
galdr-skill/: galdr.skill
galdr-skill/galdr/: SKILL.md
galdr-skill/galdr/references/: metrics.md
src/galdr/: SKILL.md  __init__.py  analyze.py  assemble.py  catalog.py  cli.py  compare.py  constants.py  fetch.py  frames.py  harmony.py  melody.py  overtone.py  perceive.py
src/galdr/templates/: ARC-PROMPT.md
tests/: test_functional.py  test_regressions.py  test_smoke.py  test_unit.py
